--- a/src/toml-fs/toml-fs.fsproj
+++ b/src/toml-fs/toml-fs.fsproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Prelude.fs" />
     <Compile Include="AST.fs" />
     <Compile Include="Parsers.fs" />
     <None Include="Script.fsx" />
