--- a/src/toml-fs/toml-fs.fsproj
+++ b/src/toml-fs/toml-fs.fsproj
@@ -10,7 +10,7 @@
     <RootNamespace>toml-fs</RootNamespace>
     <AssemblyName>toml-fs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>toml-fs</Name>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -48,6 +48,7 @@
     <Compile Include="AST.fs" />
     <Compile Include="Parsers.fs" />
     <None Include="Script.fsx" />
+    <None Include="datatypes.fsx" />
     <None Include="paket.references" />
     <None Include="paket.template" />
   </ItemGroup>
