--- a/tests/toml-fs.Tests/toml-fs.Tests.fsproj
+++ b/tests/toml-fs.Tests/toml-fs.Tests.fsproj
@@ -10,7 +10,7 @@
     <RootNamespace>toml-fs.Tests</RootNamespace>
     <AssemblyName>toml-fs.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <Name>toml-fs.Tests</Name>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
@@ -55,7 +55,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="Generators.fs" />
+    <Compile Include="ParserTests.fs" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
