fscheck basic strings

--- a/src/toml-tp/toml-tp.fsproj
+++ b/src/toml-tp/toml-tp.fsproj
@@ -10,9 +10,10 @@
     <RootNamespace>toml_tp</RootNamespace>
     <AssemblyName>toml_tp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Name>toml-tp</Name>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
