Referenced the project Toml.FSharp.fsproj and not the Toml.FSharp.dll generated from the build process

--- a/tests/Toml.FSharp.Tests/Toml.FSharp.Tests.fsproj
+++ b/tests/Toml.FSharp.Tests/Toml.FSharp.Tests.fsproj
@@ -71,9 +71,13 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <Reference Include="Toml.FSharp">
-      <HintPath>..\..\src\Toml.FSharp\bin\Debug\Toml.FSharp.dll</HintPath>
-    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Toml.FSharp\Toml.FSharp.fsproj">
+      <Name>Toml.FSharp</Name>
+      <Project>{fb1a1a88-dc9f-44ef-9ec1-731a3f58dddf}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.0' Or $(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
